Implement weather API integration